--- a/android/app/src/debug/res/values/api_keys.xml
+++ b/android/app/src/debug/res/values/api_keys.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Facebook Login API -->
     <string name="app_name">Questrip</string>
     <string name="facebook_app_id">716742638722224</string>
     <string name="fb_login_protocol_scheme">fb716742638722224</string>
+    <!-- Google Maps API -->
+    <string name="google_maps_key">AIzaSyBZ10M0EWoVVlz_AnzXDyR2HdQvVm07rtg</string>
 </resources>
